--- a/sass/modules/service-card/_service-card.scss
+++ b/sass/modules/service-card/_service-card.scss
@@ -191,7 +191,7 @@
 // Theme Responsive
 .service-area-wrapper{
     z-index: unset !important;
-    @include rmaxwd (1399px){
+    @include rmaxwd (1399){
         margin-top: 0 !important;
     }
     .slider-area{
